--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,14 +16,19 @@
     margin-top: 100px;
 }
 #profilepage img{
+   
+    height: 300px;
+    
+    
+}
+#fotoik{
     float: right;
     height: 300px;
     margin: 50px;
     margin-top: 200px;
     margin-bottom: 0px;
-    
 }
-#profilepage  img:hover{
+#projectpage  img:hover{
     border-top: 5px solid #9d4edd;
     border-bottom: 5px solid #9d4edd;
     border-left: 5px solid #9d4edd;
@@ -83,6 +88,7 @@
 #nav {
     height: 10%;
     background-color: #240046;
+    display: flex;
     overflow:hidden;
     border: solid black;
 }
@@ -160,4 +166,79 @@
 }
 a{
     color: white;
+}
+.nav-content{
+    font-size: 160%;
+}
+#projectpage{
+    height: 100vh;
+    width: 100%;
+    background-color: #240046;
+}
+
+#contactpage{
+    height: 100vh;
+    width: 100%;
+    background-color: #240046;
+}
+#projectcontent{
+    height: 500px;
+    width: 400px;
+    float: left;
+}
+#projectcontent1{
+    height: 500px;
+    width: 400px;
+    float: right;
+    color: white;
+    margin-top: 100px;
+}
+#projectcontent1 h2{
+    margin-left: 120px;
+}
+
+#projectwrapper{
+    height: 100%;
+    width: 100%;
+   
+  
+}
+#projectwrapper1{
+    height: 500px;
+    width: 300px;
+    float: left;
+    clear:both ;
+    margin-top:-250px ;
+    margin-left: 200px;
+}
+#projectwrapper2{
+    height: 500px;
+    width: 300px;
+    float: left;
+    
+    margin-left: 150px;
+    margin-top:-250px ;
+}
+#nummer{
+    position: relative;
+    top: 300px;
+}
+#Instalogo{
+ float: left;
+margin-right: 50px;
+}
+
+#mail{
+    float: left;
+}
+#calllogo{
+   
+    float: left;
+    clear: both;
+}
+#contactpage img:hover{
+    border-top: 5px solid #9d4edd;
+    border-bottom: 5px solid #9d4edd;
+    border-left: 5px solid #9d4edd;
+    border-right: 5px solid #9d4edd;
 }
