--- a/CSS/style.css
+++ b/CSS/style.css
@@ -280,3 +280,9 @@ margin-right: 50px;
 html{
     overflow-x: hidden;
 }
+#contactenpagina{
+    margin-left: 300px;
+}
+#contactpage h1{
+   margin-left: 800px;
+}
