--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,14 +1,10 @@
 * {
     margin: 0;
     padding: 0;
-
+   
 }
 
-#profilepage {
-    height: 100vh;
-    width: 100%;
-    background-color: #240046;
-}
+
 #profilepage h1{
     color: white;
     float: left;
@@ -165,8 +161,6 @@
     font-size: 160%;
     margin: 30px;
 
-
-
 }
 #contact:hover {
     color: black;
@@ -269,7 +263,7 @@ margin-right: 50px;
 }
 #gif {
     animation: rennen 4s ease-in infinite;
-    margin-top: 450px;
+    margin-top: 565px;
 }
 #gif2 {
     animation: rennen 4s ease-in infinite;
@@ -286,3 +280,22 @@ html{
 #contactpage h1{
    margin-left: 800px;
 }
+/* width dikte*/
+::-webkit-scrollbar {
+    width: 15px;
+  }
+  
+  /* Track de progressie in de scrollbar*/
+  ::-webkit-scrollbar-track {
+    background: #5a189a;;
+  }
+  
+  /* Handle gedeelte dat beweegt */
+  ::-webkit-scrollbar-thumb {
+    background: #9d4edd;;
+  }
+  
+  /* Handle waneer je hovert */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #9d4edd;;
+  }
