--- a/css/pofo-opdrachtstyle.css
+++ b/css/pofo-opdrachtstyle.css
@@ -106,3 +106,13 @@ a{
     width: 20%;
     padding: 10px;
 }
+#pofo-foto img{
+    height: 300px;
+    margin-left: 600px;
+}
+#p{
+    margin-left: 600px;
+}
+img{
+    margin-left:600px ;
+}
