--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,7 @@ html{
   
   /* Track de progressie in de scrollbar*/
   ::-webkit-scrollbar-track {
-    background: #5a189a;;
+    background: #240046;;
   }
   
   /* Handle gedeelte dat beweegt */
