--- a/css/pofo-opdrachtstyle.css
+++ b/css/pofo-opdrachtstyle.css
@@ -114,3 +114,15 @@ a{
 img{
     margin-left:600px ;
 }
+h1{
+    font-family: 'Oswald', sans-serif;
+  }
+  h2{
+    font-family: 'Oswald', sans-serif;
+  }
+  h3{
+      font-family: 'Oswald', sans-serif;
+}
+  p{
+    font-family: 'PT Sans', sans-serif;
+  }
